# 2021_ai_introduction

./: .gitignore  README.md  pyproject.toml  最終課題.ipynb
01_20210915/: 第一回.ipynb  第一回課題.ipynb
02_20210923/: 第二回.ipynb  第二回課題.ipynb
03_20211004/: 第三回.ipynb  第三回課題.ipynb
04_20211012/: playground.ipynb  第四回.ipynb  第四回課題.ipynb
05_20211014/: 第五回.ipynb  第五回課題.ipynb
06_20211026/: 第六回.ipynb  第六回課題.ipynb
07_20211116/: 第7回.ipynb  第7回課題.ipynb
08_20211116/: 第8回.ipynb  第8回課題.ipynb
09_20220115/: 第9回.ipynb  第9回課題.ipynb
10_20220116/: .gitignore  第10回.ipynb  第10回課題.ipynb
11_20220116/: .gitignore  第11回.ipynb  第11回課題.ipynb
12_20220116/: .gitignore  第12回.ipynb  第12回課題.ipynb
13_20220116/: .gitignore  第13回.ipynb  第13回課題.ipynb
14_20220116/: 第14回.ipynb
