[tool.poetry]
name = "2021_ai_introduction"
version = "0.1.0"
description = "AI入門の履修レポジトリ"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pandas = "^1.3.3"

[tool.poetry.dev-dependencies]
poetry = "^1.1.8"
jupyterlab = "^3.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
