[tool.poetry]
name = "2021_ai_introduction"
version = "0.1.0"
description = "AI入門の履修レポジトリ"
authors = ["Yuichiro Smith <contact@yu-smith.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pandas = "^1.3.3"
matplotlib = "^3.4.3"
eacal = "^0.0.3"
openpyxl = "^3.0.9"
scikit-learn = "^1.0.2"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]
poetry = "^1.1.8"
jupyterlab = "^3.1.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
